--- a/frontend/placeconnect/package.json
+++ b/frontend/placeconnect/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
+    "browser-image-compression": "^2.0.2",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
