--- a/frontend/placeconnect/package.json
+++ b/frontend/placeconnect/package.json
@@ -14,7 +14,9 @@
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
     "browser-image-compression": "^2.0.2",
+    "firebase": "^11.7.1",
     "lucide-react": "^0.509.0",
+    "multer": "^1.4.5-lts.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
